2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: fixed "Bug
	456308 - Assembly Browser: namespace browser".

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs: Added
	link support (Loading of referenced links still missing).

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs: Track api changes.

2009-01-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserView.cs: Only "one" browser
	now can be open.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Added support
	for generic help urls.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser.mdp: All projects now require fx 3.5.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs: In
	CanCreateContentForFile, return true for assemblies.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomReturnTypeNodeBuilder.cs: renamed
	emitmarkup.

2008-11-27  Mike Krüger  <mkrueger@novell.com>
