@@ -1,6 +1,15 @@
 2009-01-14  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
+	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
+	* MonoDevelop.AssemblyBrowser/ReferenceNodeBuilder.cs:
+	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
+	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs: Types are
+	now clickable.
+
+2009-01-14  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
 	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: fixed "Bug
 	456308 - Assembly Browser: namespace browser".
 
